revert windows scrollbar fix (bug 1157595)

--- a/src/media/css/elements--nav.styl
+++ b/src/media/css/elements--nav.styl
@@ -112,7 +112,7 @@ mkt-nav {
     font-size: 18px;
     height: 100%;
     left: -1 * $nav--width;
-    overflow: hidden;
+    overflow-y: scroll;
     position: fixed;
     top: 0;
     transition: unquote($nav--transition + ', opacity 0s linear 300ms');
@@ -207,7 +207,7 @@ mkt-nav-child {
     display: block;
     height: $nav--header-height;
     left: -1 * $nav--width;
-    overflow: hidden;
+    overflow-y: scroll;
     position: absolute;
     padding-top: $nav--header-height;
     top: 0;
